# videostream-rs

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md
.github/: README.md  license-overrides.json
.github/scripts/: check_license_policy.py  generate_notice.py  generate_sbom.sh
.github/workflows/: rust.yml
src/: .frame.rs.swp  camera.rs  client.rs  decoder.rs  encoder.rs  fourcc.rs  frame.rs  host.rs  lib.rs
tests/: .test_frame.rs.swp  test_frame.rs  test_host.rs
videostream-sys/: Cargo.toml  README.md  build.rs  update.sh  videostream.h
videostream-sys/src/: .ffi.rs.swp  ffi.rs  lib.rs
