[package]
name = "videostream"
description = "VideoStream Library provides zero-copy video frame management and distribution across processes and containers."
authors = ["Au-Zone Technologies"]
readme = "README.md"
license = "AGPL-3.0"
homepage = "https://support.deepviewml.com"
repository = "https://github.com/DeepViewML/videostream-rs"
documentation = "https://docs.rs/videostream"
keywords = ["deepview", "visionpack"]
categories = ["computer-vision", "multimedia::video", "api-bindings"]
version = "0.0.0"
edition = "2021"

exclude = [
    "/.github/*",
    "/.gitattributes",
    "/clippy.toml",
    "/codecov.yml",
]

[lib]
name = "videostream"

[workspace]
members = ["videostream-sys"]

[dependencies]
videostream-sys = {version = "0.0.0", path = "videostream-sys"}
dma-buf = "0.4.0"
unix-ts = "1.0.0"

[dev-dependencies]
rand = "0.9.0"
serial_test = "3.2.0"

[features]
nightly = []
