[package]
name = "videostream"
description = "Safe Rust bindings for VideoStream Library - zero-copy video frame management and distribution across processes and containers for edge AI applications."
authors = ["Au-Zone Technologies"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://edgefirst.ai"
repository = "https://github.com/DeepViewML/videostream-rs"
documentation = "https://docs.rs/videostream"
keywords = ["video", "zero-copy", "edge-ai", "computer-vision", "embedded"]
categories = ["computer-vision", "multimedia::video", "api-bindings", "hardware-support"]
version = "0.0.0"
edition = "2021"

exclude = [
    "/.github/*",
    "/.gitattributes",
    "/clippy.toml",
    "/codecov.yml",
]

[lib]
name = "videostream"

[workspace]
members = ["videostream-sys"]

[dependencies]
videostream-sys = {version = "0.0.0", path = "videostream-sys"}
dma-buf = "0.4.0"
unix-ts = "1.0.0"

[dev-dependencies]
rand = "0.9.0"
serial_test = "3.2.0"

[features]
nightly = []
