[package]
name = "videostream-sys"
description = "Low-level FFI bindings for VideoStream Library"
readme = "README.md"
license-file = "LICENSE"
license = "AGPL-3.0"
homepage = "https://support.deepviewml.com"
repository = "https://github.com/DeepViewML/videostream-rs"
documentation = "https://docs.rs/videostream"
keywords = ["deepview", "visionpack"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]
version = "0.2.0"
edition = "2021"

[dependencies]
libc = "^0.2"